update docs and build script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"dev": "bun --watch src/index.tsx",
 		"build": "bun run build:bundle && bun run build:compile",
 		"build:bundle": "esbuild src/index.tsx --bundle --platform=node --target=node18 --outfile=dist/index.js --format=esm --minify --external:react-devtools-core --external:bun:sqlite",
-		"build:compile": "mkdir -p dist && cp node_modules/yoga-wasm-web/dist/yoga.wasm dist/ && bun build src/index.tsx --compile --outfile dist/seerdb --target bun --minify --external react-devtools-core --external bun:sqlite && bun run build:wrapper",
+		"build:compile": "mkdir -p dist && bun build src/index.tsx --compile --outfile dist/seerdb --target bun --minify --external react-devtools-core --external bun:sqlite --loader .wasm=file && cp node_modules/yoga-wasm-web/dist/yoga.wasm dist/ && bun run build:wrapper",
 		"build:wrapper": "echo '#!/usr/bin/env bash\n# Wrapper script for SeerDB executable\nSCRIPT_DIR=\"$( cd \"$( dirname \"${BASH_SOURCE[0]}\" )\" && pwd )\"\ncd \"$SCRIPT_DIR\" && exec ./seerdb \"$@\"' > dist/seerdb.sh && chmod +x dist/seerdb.sh",
 		"build:exe": "bun run build:compile",
 		"start": "bun dist/index.js",
