--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "seerdb",
-	"version": "0.3.0",
-	"description": "Terminal-based database explorer rewritten in Node.js/TypeScript",
+	"version": "0.3.1",
+	"description": "Terminal-based database explorer rewritten in Bun/TypeScript",
 	"type": "module",
 	"main": "dist/index.js",
 	"bin": {
